# RAG

./: .gitignore  README.md  main.py  pyproject.toml  rag.py  requirements.txt  test_gemini.py
.github/workflows/: deploy.yml
deployment/: Dockerfile  rag.py  requirements.txt
notebook/: document.ipynb
